More fixes done.

--- a/add-car-8.html
+++ b/add-car-8.html
@@ -121,7 +121,7 @@
                                             <div class="d-flex align-items-center gap-1">
                                                 <h4 class="cdri-price-title">£ 11,750</h4>
                                                 <img src="./assets/img/info-icon.svg" alt="Inof" class="cdc-info"
-                                                    onclick="openModal('acCarPrice')">
+                                                    onclick="openModal('acValuationInfo')">
                                             </div>
                                         </div>
                                     </div>
@@ -873,6 +873,101 @@
                                     <img src="./assets/img/isb-check-circle.svg" alt="Check" height="24">
                                     <span>Expert support available: Get help from our team throughout the
                                         process.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade primary-modal add-car-modal" id="acValuationInfo" tabindex="-1"
+            aria-labelledby="ac_info_popupLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header p-0 border-0">
+                        <h5 class="modal-title" id="ac_info_popupLabel">Valuation information</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                            <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_4_58484)">
+                                    <path
+                                        d="M4.99609 20C4.99609 21.9698 5.38408 23.9204 6.1379 25.7403C6.89172 27.5601 7.99661 29.2137 9.38949 30.6066C10.7824 31.9995 12.436 33.1044 14.2558 33.8582C16.0757 34.612 18.0263 35 19.9961 35C21.9659 35 23.9165 34.612 25.7363 33.8582C27.5562 33.1044 29.2098 31.9995 30.6027 30.6066C31.9956 29.2137 33.1005 27.5601 33.8543 25.7403C34.6081 23.9204 34.9961 21.9698 34.9961 20C34.9961 18.0302 34.6081 16.0796 33.8543 14.2597C33.1005 12.4399 31.9956 10.7863 30.6027 9.3934C29.2098 8.00052 27.5562 6.89563 25.7363 6.14181C23.9165 5.38799 21.9659 5 19.9961 5C18.0263 5 16.0757 5.38799 14.2558 6.14181C12.436 6.89563 10.7824 8.00052 9.38949 9.3934C7.99661 10.7863 6.89172 12.4399 6.1379 14.2597C5.38408 16.0796 4.99609 18.0302 4.99609 20Z"
+                                        fill="white" fill-opacity="0.3" />
+                                    <path d="M16.6641 16.6641L23.3307 23.3307M23.3307 16.6641L16.6641 23.3307"
+                                        stroke="white" stroke-width="1.66667" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_4_58484">
+                                        <rect width="40" height="40" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <div class="sim-content">
+                            <div class="d-flex flex-column gap-2">
+                                <div class="d-flex flex-column gap-1">
+                                    <h4 class="fw-medium mb-0 text-white text-18">Can the price change?</h4>
+                                    <p class="mb-0 text-white fw-light"> Your initial estimate is based on the
+                                        assumption that your car is in top-notch condition. After you complete your
+                                        profile, we'll provide a revised guide price reflecting your car's actual
+                                        condition, including any damage, mechanical issues, or upgrades. Dealers,
+                                        traders and online buyers will then bid on your car during our daily sale, or
+                                        the sale type you have chosen and you'll receive their highest offer within 24
+                                        hours. </p>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column gap-2">
+                                <div class="d-flex flex-column gap-1">
+                                    <h4 class="fw-medium mb-0 text-white text-18">Next steps?</h4>
+                                </div>
+                                <div class="info-steps d-flex flex-column">
+                                    <div class="d-flex gap-3 is-flex">
+                                        <img src="./assets/img/info-steps-circle.svg" alt="Circle" height="24">
+                                        <div class="d-flex flex-column">
+                                            <span class="fw-medium text-white is-title">Be a Carsmart ready user!</span>
+                                            <span class="fw-light text-white is-desc">Provide details about your car's
+                                                condition to get an accurate updated guide price.</span>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex gap-3 is-flex">
+                                        <img src="./assets/img/info-steps-circle.svg" alt="Circle" height="24">
+                                        <div class="d-flex flex-column">
+                                            <span class="fw-medium text-white is-title">Unlock Your Best Deal!</span>
+                                            <span class="fw-light text-white is-desc">Your car will be featured in our
+                                                daily sale, where over 18,000 dealers, traders, and online buyers will
+                                                compete with competitive bids. For longer auctions or listings, like
+                                                Quick Sales or Marketplace Listings, you'll receive the highest offer on
+                                                the day it closes to verify and approve.</span>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex gap-3 is-flex">
+                                        <img src="./assets/img/info-steps-circle.svg" alt="Circle" height="24">
+                                        <div class="d-flex flex-column">
+                                            <span class="fw-medium text-white is-title">Wrap up your Smart Connect Deal!
+                                            </span>
+                                            <span class="fw-light text-white is-desc">Complete the sale with convenient
+                                                collection using Smart Drop or collect the vehicle at your convenience
+                                                and receive quick payment. Remember with Smart Drop the vehicle will be
+                                                appraised on the day, needing your authorisation to proceed wiith the
+                                                sale, see Smart Drop for more information.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column isb-flex">
+                                <span class="fw-medium text-white">Additional Benefits:</span>
+                                <div class="d-flex align-items-center isb-flex text-white fw-normal">
+                                    <img src="./assets/img/isb-check-circle.svg" alt="Check" height="24">
+                                    <span>Real-Time updates: <span class="fw-light">Receive notifications throughout
+                                            your sale and on your highest offer so you're always informed.</span></span>
+                                </div>
+                                <div class="d-flex align-items-center isb-flex text-white fw-normal">
+                                    <img src="./assets/img/isb-check-circle.svg" alt="Check" height="24">
+                                    <span>Dedicated Assistance: <span class="fw-light">Our support team is here to help
+                                            you with any questions or concerns throughout the process.</span></span>
                                 </div>
                             </div>
                         </div>
