--- a/signup-confirmation.html
+++ b/signup-confirmation.html
@@ -91,7 +91,8 @@
         <main>
             <section class="signup-sec">
                 <div class="container">
-                    <div class="signup-confirm-cont">
+                    <div class="signup-confirm-cont position-relative">
+                        <img src="./assets/img/poppers.svg" alt="Confetti" class="confetti-img">
                         <div class="signup-flex-main">
                             <div class="signup-form-box signup-confirm-box">
                                 <div class="d-flex flex-column scb-flex align-items-center text-center text-white">
