--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=26">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=25">
     </head>
 
     <body>
@@ -63,10 +63,13 @@
                 <div class="d-flex signup-hero-content flex-column gap-3 mb-md-0 mb-5">
                     <div class="d-flex gap-2 shc-title mb-1">
                         <img src="./assets/img/Rays-purple-left.svg" alt="Rays">
-                        <h2 class="mb-0 fw-medium ms-1"><span class="purple-underline">SmartHub</span> <span
-                                class="d-block">Sign up</span> <span class="d-block">form</span></h2>
+                        <h2 class="mb-0 fw-medium ms-1"><span class="purple-underline">SmartHub</span> 
+                            <span class="hs-title">
+                                <span class="d-block">sign up form</span>
+                            </span>
+                        </h2>
                     </div>
-                    <div class="ps-xl-5">
+                    <div class="ps-lg-5 ps-4 ms-lg-0 ms-2">
                         <a href="#signup-sec"
                             class="btn btn-main d-flex align-items-center justify-content-center"><span>Sign
                                 up</span><svg width="11" height="26" viewBox="0 0 11 26" fill="none"
@@ -620,9 +623,9 @@
                                                         <div class="col-12">
                                                             <div class="dropdown dropdown-checks">
                                                                 <button class="form-control fpf-inp sfc-inp"
-                                                                    data-bs-auto-close="outside" id="dropdownMenuButton2"
-                                                                    data-bs-toggle="dropdown" aria-expanded="false"
-                                                                    type="button">
+                                                                    data-bs-auto-close="outside"
+                                                                    id="dropdownMenuButton2" data-bs-toggle="dropdown"
+                                                                    aria-expanded="false" type="button">
                                                                     <span>Select brand</span>
                                                                     <svg width="16" height="10" viewBox="0 0 16 10"
                                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -823,7 +826,8 @@
                                 <img src="./assets/img/Rays-green.svg" alt="Rays">
                                 <span>The smarter way to trade.</span>
                             </h3>
-                            <p class="mb-0 pf-subtitle"><span class="text-parrot">87%</span> of sellers earn more, sell your car tthe smart way!</p>
+                            <p class="mb-0 pf-subtitle"><span class="text-parrot">87%</span> of sellers earn more, sell
+                                your car tthe smart way!</p>
                         </div>
                         <img src="./assets/img/pre-footer-img.png" alt="Car"
                             class="w-100 img-fluid d-lg-none d-block mt-5">
@@ -1061,7 +1065,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=26"></script>
+        <script src="./assets/js/custom.js?v=25"></script>
     </body>
 
 </html>
