--- a/password-confirmation.html
+++ b/password-confirmation.html
@@ -25,7 +25,7 @@
                         <img src="./assets/img/carsmart-logo-full-color-rgb 1.svg" alt="Logo" class="fp-logo d-block">
                         <div class="fp-form-box-outer">
                             <div class="fp-form-box">
-                                <h2 class="fp-form-title mb-0">Password Changed Successfully</h2>
+                                <h2 class="fp-form-title mb-0">Password changed successfully</h2>
                                 <form action="" class="fp-form d-flex flex-column gap-4">
                                     <div class="fpf-bottom">
                                         <a href="./signin-1.html" class="btn btn-main d-flex align-items-center w-100 justify-content-center"><span>Dashboard Login</span><svg
